i s2g just fixing a tiny overflow-x thing that was bothering me you can grade the last commit before 11:59 but i want my website to be nice

--- a/assets/bfi_assets/css/style.css
+++ b/assets/bfi_assets/css/style.css
@@ -8,10 +8,11 @@ body, html {
   width: 100%;
   height: 100%;
   min-height: 625px;
-  min-width: 600px;
+  min-width: 460px;
 
   font-family: "Quicksand", sans-serif;
 }
+
 
 /* Custom Fonts */
 @font-face {
@@ -54,6 +55,7 @@ svg {
 
 .fade-in{
 	opacity: 0;
+   overflow-x: visible !important;
 }
 
 @keyframes wobble {
@@ -269,7 +271,7 @@ svg {
 	text-align: center;
 	min-width: 460px;
 	max-width: 1000px;
-    min-height: 400px;
+  min-height: 400px;
 }
 
 #bike-img img {
@@ -283,25 +285,38 @@ svg {
 #food-img img{
 	height: auto; 
 	padding-bottom: 24px;
-    width: 50%; 
-    z-index: -1;
-    max-width: 500px;
-    overflow: hidden;
+  width: 50%; 
+  z-index: -1;
+  min-width: 460px;
+  max-width: 500px;
+  overflow: hidden;
 }
 
 #pie-charts{
 	display: flex;
+  flex-wrap: wrap;
 	text-align: center;
-	padding-top: 96px;
+  justify-content: center;
+  align-items: center;
+	padding-top: 72px;
 	margin: 0 auto;
-	
+	min-width: 200px !important; 
 	max-width: 1100px;
 	padding-bottom: 64px;
 }
 
 #pie{
-	flex: 50%;
-  min-width: 460px !important; 
+	min-width: 46%;
+  flex: 1;
+  padding-right: 4%
+}
+
+@media(max-width: 820px) {
+  #pie {
+    min-width: 100%;
+    padding-top: 64px;
+    padding-right: 12%;
+  }
 }
 
 #food-table {
@@ -309,6 +324,7 @@ svg {
     border-collapse: collapse;
     width: 80%;
     margin: 0 auto;
+    min-width: 460px;
 }
 
 #food-table::before {
@@ -432,6 +448,9 @@ svg {
     /*top: 0;*/
 }
 
+/*.active {
+  overflow-x: visible !important;
+}*/
 
 
 
